# aoc-2023

./: .aocbench.yaml  .aocrunner.json  .gitignore  Dockerfile  README.md  build.sh  graph.dot  justfile  package-lock.json  package.json  requirements.txt  run.sh  setup.cfg
.docker/: Dockerfile  entrypoint.sh
answers/: day02.txt  day04.txt  day05.txt  day06.txt  day07.txt  day08.txt  day10.txt  day13.txt  day14.txt  day15.txt  day16.txt  day18.txt
aoc2023/: __main__.py
aoc2023/days/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py
aoc2023/utils/: day.py  io.py
src/: bench.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day19.py  (+1 more)
src/day01/: answers.txt  index.ts
src/template/: index.ts
templates/: day.py  test_day.py
