[metadata]
name = aoc2023
author = Dan Foster
version = 0.0.1

[options]
install_requires =
     click
packages = aoc2023


[options.extras_require]
dev = 
     mypy
     black
     pip-tools
     isort
     pytest

[options.entry_points]
console_scripts =
    aoc2023 = aoc2023.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203
